--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
-	<title>Histogram Maker</title>
+	<title>Histogrammer</title>
 	<link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/styles.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
@@ -149,7 +149,7 @@
 				  key : CONFIG.table_id,
 				  worksheet : "1"
 				});
-							
+
 				ds.fetch({ 
 				  success : function() {
 				  	console.log(this)
