--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<h2>An interactive histogram maker</h2>
-	<h4>Put your data into a Google Spreadsheet and name the data column "data." Publish it to the web, paste the key and get a distribution. <a href="http://github.com/mhkeller/histogrammer" target="_blank">More info.</a></h4>
+	<h4>Put your data into a Google Spreadsheet and name your values column "data". Publish it to the web, paste the key and get a distribution. <a href="http://github.com/mhkeller/histogrammer" target="_blank">More info.</a></h4>
 
 	<div id="controls">
 		<div id="break-controls" class="control-block">
