added descriptive stats

--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
 		</div>
 		<input id="submit-btn" type="submit" value="New Histogram!"/>
 	</div>
+	<div id="descriptive-stats">
+		<span id="mean" class="stat"><strong>Mean</strong>: <span>&#8212;</span></span>
+		<span id="median" class="stat"><strong>Median</strong>: <span>&#8212;</span></span>
+		<span id="mode" class="stat"><strong>Mode(s)</strong>: <span>&#8212;</span></span>
+		<span id="range" class="stat"><strong>Range</strong>: <span>&#8212;</span></span>
+	</div>
 	<div id="chart-container" style="width:100%;height:400px;"></div>
 	<script src="js/app.js"></script>
 </body>
