change button name

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<div class="radio-option"><input type="radio" value="square" name="group2" /> &#8730;</div>
 		</div>
 		<div>
-			<input id="submit-btn" type="submit" value="New Histogram!"/>
+			<input id="submit-btn" type="submit" value="Histogram Me!"/>
 		</div>
 	</div>
 	<div id="descriptive-stats">
