--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/styles.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+	<script src="libs/jquery.ba-bbq.min.js"></script>
 	<script src="libs/miso.ds.deps.min.0.2.1.js"></script>
 	<script src="libs/highcharts.js" type="text/javascript" charset="utf-8"></script>
 	<script src="http://d3js.org/d3.v2.min.js?2.9.6"></script>
