--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
-	<link rel="shortcut icon" href="imgs/favicon.ico">
-	<title>Histogrammer</title>
+	<link rel="shortcut icon" href="imgs/favicon.png">
+	<title>Histagram.me</title>
 	<link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/styles.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
@@ -11,11 +11,11 @@
 	<script src="libs/miso.ds.deps.min.0.2.1.js"></script>
 	<script src="libs/highcharts.js" type="text/javascript" charset="utf-8"></script>
 	<script src="http://d3js.org/d3.v2.min.js?2.9.6"></script>
-	
+
 </head>
 <body>
-	<h2>An interactive histogram maker</h2>
-	<h4>Put your data into a Google Spreadsheet, publish it to the web, paste the key, the column with your data, and get a distribution. <a href="http://github.com/mhkeller/histogrammer" target="_blank">More info.</a></h4>
+	<img src="imgs/logo.png" </img>
+	<h4>Put your data in a Google Spreadsheet, publish it to the web, paste the key, the column name of your data, and get a distribution.  <a href="http://github.com/mhkeller/histogrammer" target="_blank">More info.</a></h4>
 
 	<div id="controls">
 		<div id="controls-table-key" class="control-block">
@@ -36,7 +36,7 @@
 			<div class="radio-option"><input type="radio" value="square" name="group2" /> &#8730;</div>
 		</div>
 		<div>
-			<input id="submit-btn" type="submit" value="Histogram Me!"/>
+			<input id="submit-btn" type="submit" value="Histagram Me!"/>
 		</div>
 	</div>
 	<div id="descriptive-stats">
