defaults to 15 bins

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 			<input id="column-name" type="text" placeholder="Column name" />
 		</div>
 		<div id="break-controls" class="control-block">
-			<div class="radio-option"><input type="radio" value="break" name="group1" checked/> Break distance</div>
-			<div class="radio-option"><input type="radio" value="bin" name="group1"/> Bin number</div>
+			<div class="radio-option"><input type="radio" value="bin" name="group1" checked/> Bin number</div>
+			<div class="radio-option"><input type="radio" value="break" name="group1"/> Break distance</div>
 		</div>
 		<div class="control-block">
 			<input id="bins-breaks" type="text" placeholder="Default = 5" />
