--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 	<link rel="shortcut icon" href="imgs/favicon.png">
 	<title>Histagram.me</title>
-	<link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/styles.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-	<script src="libs/jquery.ba-bbq.min.js"></script>
-	<script src="libs/miso.ds.deps.min.0.2.1.js"></script>
-	<script src="libs/highcharts.js" type="text/javascript" charset="utf-8"></script>
-	<script src="http://d3js.org/d3.v2.min.js?2.9.6"></script>
+	<script src="js/thirdparty/jquery.1.10.2.min.js"></script>
+	<script src="js/thirdparty/miso.ds.deps.ie.0.4.1.js"></script>
+	<script src="js/thirdparty/highcharts.js"></script>
+	<script src="js/thirdparty/d3.v3.min.js"></script>
+	<script src="js/thirdparty/simple_statistics.js"></script>
+	<script src="js/thirdparty/jquery.ba-bbq.min.js"></script>
 
 </head>
 <body>
