--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 	<link rel="shortcut icon" href="imgs/favicon.png">
 	<title>Histagram.me</title>
 	<link rel="stylesheet" href="css/styles.css">
-	<script src="js/thirdparty/jquery.1.10.2.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+	<script src="js/thirdparty/jquery.ba-bbq.min.js"></script>
 	<script src="js/thirdparty/miso.ds.deps.ie.0.4.1.js"></script>
 	<script src="js/thirdparty/highcharts.js"></script>
 	<script src="js/thirdparty/d3.v3.min.js"></script>
 	<script src="js/thirdparty/simple_statistics.js"></script>
-	<script src="js/thirdparty/jquery.ba-bbq.min.js"></script>
 
 </head>
 <body>
