--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 			<div class="radio-option"><input type="radio" value="ln" name="group2" /> ln()</div>
 			<div class="radio-option"><input type="radio" value="square" name="group2" /> &#8730;</div>
 		</div>
+		<div class="control-block">
+			<input id="bins-breaks" type="text" placeholder="Default = 15" />
+		</div>
 		<div>
 			<input id="submit-btn" type="submit" value="Histagram Me!"/>
 		</div>
@@ -46,18 +49,18 @@
 		<span id="range" class="stat"><strong>Range</strong>: <span>&#8212;</span></span>
 	</div>
 	<div id="chart-container" style="width:100%;height:400px;"></div>
-	<script src="js/app.js"></script>
+	<script src="js/main.js"></script>
 	<script type="text/javascript">
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-39274729-1']);
-  _gaq.push(['_trackPageview']);
+  // var _gaq = _gaq || [];
+  // _gaq.push(['_setAccount', 'UA-39274729-1']);
+  // _gaq.push(['_trackPageview']);
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+  // (function() {
+  //   var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+  //   ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+  //   var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  // })();
 
 </script>
 </body>
