--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
 		</div>
 		<div id="break-controls" class="control-block">
 			<div class="control-header">Binning</div>
-			<div class="radio-option"><input type="radio" value="bin" name="group1" checked/> Bin number</div>
-			<div class="radio-option"><input type="radio" value="break" name="group1"/> Break distance</div>
+			<div class="radio-option"><input type="radio" value="bins" name="binning" checked/> Bin number</div>
+			<div class="radio-option"><input type="radio" value="breaks" name="binning"/> Break distance</div>
 			<input id="bins-breaks" type="text" placeholder="Default = 15" />
 		</div>
-		<div class="control-block">
+		<div class="control-block" id="cluster-controls">
 			<div class="control-header">Bin clustering</div>
-			<select id="clustering" >
-				<option value="even-bins">Even bins</option>
+			<select id="clustering">
 				<option value="jenks">Jenks (Natural breaks)</option>
+				<option value="even">Even bins</option>
 			</select>
 		</div>
 		<div id="controls-transformation" class="control-block" style="display:none;">
-			<div class="radio-option"><input type="radio" value="raw" name="group2" checked/> Raw</div>
-			<div class="radio-option"><input type="radio" value="log" name="group2" /> Log</div>
-			<div class="radio-option"><input type="radio" value="ln" name="group2" /> ln()</div>
-			<div class="radio-option"><input type="radio" value="square" name="group2" /> &#8730;</div>
+			<div class="radio-option"><input type="radio" value="raw" name="transformations" checked/> Raw</div>
+			<div class="radio-option"><input type="radio" value="log" name="transformations" /> Log</div>
+			<div class="radio-option"><input type="radio" value="ln" name="transformations" /> ln()</div>
+			<div class="radio-option"><input type="radio" value="square" name="transformations" /> &#8730;</div>
 		</div>
 		<div>
 			<input id="submit-btn" type="submit" value="Histagram Me!"/>
