added head/tail break clustering

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 			<label for="binning">Type:</label>
 			<select id="binning" name="binning">
 				<option value="jenks">Jenks (Natural breaks)</option>
+				<option value="head-tail">Head/Tail breaks (for skewed data)</option>
 				<option value="even">Even bins</option>
 				<option value="custom-breaks">Custom breaks</option>
 				<option value="custom-interval">Custom interval</option>
