evenly spaced bints

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<select id="binning" name="binning">
 				<option value="jenks">Jenks (Natural breaks)</option>
 				<option value="head-tail">Head/Tail breaks (for skewed data)</option>
-				<option value="even">Even bins</option>
+				<option value="even">Evenly-spaced bins</option>
 				<option value="custom-breaks">Custom breaks</option>
 				<option value="custom-interval">Custom interval</option>
 			</select>
