--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<option value="custom-interval">Custom interval</option>
 			</select>
 			<label for="bins_breaks_number" id="bins_breaks_number_label">Select one</label>
-			<input id="bins-breaks" type="text" placeholder="Default = 15" name="bins_breaks_number"/>
+			<input id="bins-breaks" type="text" placeholder="Default = 15" data-val='15' name="bins_breaks_number"/>
 		</div>
 		<div id="controls-transformation" class="control-block" style="display: none;">
 			<div class="radio-option"><input type="radio" value="raw" name="transformations" checked/> Raw</div>
