in progress, file uploading

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			</div>
 			<div class="clearfix"></div>
 			<input id="gdoc" type="text" placeholder="..." name="table_id" class="data-source" />
-			<input id="file" type="file" id="files" name="file" class="data-source" style="display:none;" />
+			<input id="file" type="file" name="file" class="data-source" style="display:none;" />
 			<label for="column_name">Data column name:</label>
 			<input id="column-name" type="text" placeholder="..." name="column_name"/>
 		</div>
