style and copy tweaks

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 		<div id="controls-table-key" class="control-block">
 			<div class="control-header">Table info</div>
 			<div id="spreadsheet-tab" class="tab active" data-for="gdoc">
-				Spreadsheet key
+				Google Doc key
 			</div>
 			<div id="file-tab" class="tab" data-for="file">
-				File
+				From file...
 			</div>
 			<div class="clearfix"></div>
 			<input id="gdoc" type="text" placeholder="..." name="table_id" class="data-source" />
