--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 	<img src="imgs/logo.png" </img>
-	<h4>Connect your data (paste the key from a Google spreadsheet or upload the file), set your data column's name, and get a distribution.  <a href="http://github.com/mhkeller/histagram.me" target="_blank">More info &amp; detailed how-to.</a></h4>
+	<h4>Connect your data (paste the key from a Google spreadsheet or upload the file), set your data column's name, and get a distribution.  <a href="http://github.com/mhkeller/histagram.me" target="_blank">More info &amp; detailed how-to</a>.</h4>
 
 	<div id="controls">
 		<div id="controls-table-key" class="control-block">
