ribbon and text changes

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 </head>
 <body>
-	<img src="imgs/logo.png" </img>
-	<h4>Connect your data (paste the key from a Google spreadsheet or choose a local file), set your data column's name, and get a distribution. Selecting data from a local file will not upload your data. The browser will read your data but it is neither stored nor transmitted. <a href="http://github.com/mhkeller/histagram.me" target="_blank">Read more.</a></h4>
+	<a href="https://github.com/mhkeller/histagram.me" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>	<img src="imgs/logo.png" </img>
+	<h4>Connect your data (paste the key from a Google spreadsheet or choose a local file), set your data column's name, and get a distribution. Selecting data from a local file will not upload your data. The browser will read your data but it's neither stored nor transmitted. <a href="https://github.com/mhkeller/histagram.me#how-to" target="_blank">How-to.</a></h4>
 
 	<div id="controls">
 		<div id="controls-table-key" class="control-block">
